# template-miniproduct

api/: main.py  mcp_server.py  pyproject.toml  server.py
api/src/: bootstrap.py  deps.py
api/src/agent/: agent.py
api/src/config/: __init__.py  env.py  langfuse.py  logger.py  pb.py  sheduler.py
api/src/payment/: __init__.py  controller.py  models.py
api/src/pkg/pb/: __init__.py  batch.py  client.py  collection.py  models.py
api/src/utils/: __init__.py  handle_stripe_error.py
instructions/: general.md
research/: pyproject.toml
research/src/experiments/: docs.md
scripts/db/: main.py  pyproject.toml
spa/: package-lock.json  package.json  vite.config.ts
spa/messages/: en.json  ru.json
spa/project.inlang/: project_id
spa/src/: app.css  app.html
spa/src/lib/config/: pb.ts  posthog.ts  stripe.ts
spa/src/lib/models/: user.ts
spa/src/lib/providers/: settings.svelte.ts  user.svelte.ts
spa/src/routes/: +layout.svelte  +page.svelte
spa/src/routes/(app)/: +layout.svelte
spa/src/routes/(auth)/: +layout.svelte  Oauth.svelte
spa/src/routes/(marketing)/: +layout.svelte
spa/static/scripts/: theme.js
web/: astro.config.mjs  capacitor.config.ts  ionic.config.json  package-lock.json  package.json  svelte.config.js  vite.config.ts
web/ios/App/App/: Info.plist
web/messages/: ru.json
web/src/: app.css
web/src/components/widgets/: Nav.astro
web/src/layouts/: Main.astro  Root.astro
web/src/pages/: about.astro  more.astro  welcome.astro
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web/src/styles/: global.css
(+24 files in other folders)
