[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi[all]>=0.115.12",
    "logfire[fastapi]>=3.11.0",
    "pydantic>=2.11.1",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "uvicorn[standard]>=0.34.0",
]
