[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi[all]>=0.115.12",
    "langfuse>=2.60.2",
    "litellm[proxy]>=1.9.4",
    "mcp[cli]>=1.6.0",
    "openai>=1.71.0",
    "pydantic>=2.11.1",
    "pydantic-ai>=0.0.53",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "streamlit>=1.44.1",
    "stripe>=12.0.0",
    "uvicorn[standard]>=0.34.0",
]
