[project]
name = "research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langfuse>=2.60.2",
    "litellm[proxy]>=1.65.4.post1",
    "logfire[fastapi]>=3.12.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "openai>=1.72.0",
    "pandas>=2.2.3",
    "ragas>=0.2.14",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
